[project]
name = "capstone-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.6.6",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "qdrant-client>=1.15.1",
    "streamlit>=1.49.1",
]
